--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -9,21 +9,24 @@
 	
 	\title{Chromatin Architecture Post UVC damage}
 	\maketitle
+	\tableofcontents
 	\section{Glossary of symbols}
 	\begin{itemize}
 		\itemsep0em
-		\item $N$- the number of monomers in the chain
+		\item $N$ - the number of monomers in the chain
 		\item $d$ - dimension 
 		\item $t$ - time
 		\item $\Omega_(\rho)$- a sphere is $d$ -dimension with radius $\rho$ centered at the origin
-		\item $D$ - diffusion constant
-		\item $w$ - standard white Gaussian noise
+		\item $D$   - diffusion constant
+		\item $w$   - standard white Gaussian noise
 		\item $R_i$ - position of the $i^{th}$ monomer
-		\item $k_B$- the Boltzmann constant
-		\item $T$- absolute temperature
-		\item $\xi$- friction parameter
-		\item $b$- the standard deviation of the distance betwen neighboring monomers
-		\item $l_0$- the minimal allowed spring length
+		\item $k_B$ - the Boltzmann constant
+		\item $T$   - absolute temperature
+		\item $\xi$ - friction parameter
+		\item $b$   - the standard deviation of the distance betwen neighboring monomers
+		\item $l_0$ - the minimal allowed spring length
+		\item $h$ - fraction of histone loss in a ROI
+		
 		
 	\end{itemize}
 	\section{Experimental Settings and Main Findings}
@@ -32,16 +35,16 @@
 		\item Cell type used: U20S, which are human osteosarcoma cells;
 		\item H3.3 histones are tagged 48 hours before experiments using the SNAP-tag method, tag color is red;
 		\item Repair factors XFP are labeled with GFP;
-		\item A region of $20 \mu m^2$ was photo-activated 8-10 hours before UVC;
+		\item A patch of $20 \mu m^2$ was photo-activated 8-10 hours before UVC;
 		\item UVC damage is induced in a region of the cell using a 266 $nm$ laser (0.266 $\mu m$);
-		\item Changed to the red fluorescence signal were measured in the entire volume of the cell, post UVC;
+		\item Changed to the red fluorescence signal were measured in the entire volume of the cell and in the illuminated patch, post UVC;
 		\item Images were acquired using confocal microscopy, with an auto-focus module on, to acquire images from the best focal plane;
 		\item Fluorescence intensity were normalized against values measured in undamaged nucleus;
 		\item Fluorescence loss at irradiated sites was determined by dividing the intensity in the illuminated area by the intensity of the entire nucleus after background subtraction;
 		\item Illuminated area was defined 15 minutes post UVC based on GFP labeled repair factors and was kept similar throughout measurements;
 		\item Fluorescent recovery was measured relative to previous illumination starting from the frame with the minimal fluorescent values;
 		\item 2D projection of the 3D images were obtained by \textit{maximal intensity z projection};
-		\item To gain sensitivity, most of the cell H3.3 fluorescence was photo-bleached, aside from the region of UVC illumination;
+		\item To gain sensitivity, most of the cell H3.3 fluorescence was photo-bleached, aside from the patch of UVC illumination;
 		\item 20\% loss of H3.3 signal from the \textit{entire nucleus} was detected after photo-bleaching the fluorescence patch;
 		\item However, using UVC in the fluorescent patch led to 40\% loss of parental H3.3 signal, while no detectable loss was seen in the entire nucleus;
 		\item The depletion of fluorescence signal in the center of the damage area, 15 minutes post UVC, was accompanied by an increase of density at its boundaries, balancing the loss;
@@ -54,25 +57,29 @@
 	\end{enumerate}
 	
 	
-	\section{Model and Parameter Estimation}
+	\section{Model and Parameter Estimation}\label{section:ModelAndParameterEstimation}
 
-	\subsection{Simulation outline and definitions}
-	We perform 3 stage simulation: 
+	\subsection{Simulation outline and definitions}\label{subsection:simulationOutlineAndDefinitions}
+	Our simulations are composed of 3 stages: 
 	\begin{itemize}
 		\itemsep0em
-		\item recording stage;
-		\item repair stage - in which a UVC beam is shot at initiation;
-		\item post repair stage
+		\item recording stage, in which the polymer is at relaxation;
+		\item repair stage, in which a UVC beam is shot and chromatin is damaged;
+		\item post repair stage, in which the DNA is repaired and repair proteins leave the damage region
     \end{itemize}
     
 	\subsection{Nucleus Size}
-	 Cells' cross-section are 240 $\mu m^2$ in the $x-y$ plane and $11 \mu m$ in height, giving an average radius of $r_c=7.25 \mu m$.  
-		
+	 Cells' cross-section are 240 $\mu m^2$ (radius of 8.7 $\mu m$)in the $x-y$ plane and $11 \mu m$ in height, giving an average radius of $r_c = 9.8 \mu m$.
+	\subsection{Histone Density in the cell}\label{subsection:HistoneDensity}
+      We consider histones to be uniformly distributed in the nucleus and particularly in the damage zone. There are $\approx30\times 10^6$ histones marked. Given the average cell radius, $r_c=9.8$, histone density is $30\times 10^6 /(4/3 \pi 9.8^3)\approx 7600$ histones/$\mu m^3$
+	  The expected number of histones in the 3D damage region is approximated as the number of histones in a 1 $\mu m$ radius cylinder of height $2r_c$, $2\pi r_c \times 7600\approx 468\times 10^3$ histones, and in one plane $\pi r_c^2 \times 7600 \approx 230 \times 10^3$ , assuming the beam is shot through the center of the sphere. 			
+	   	
 	\subsection{The Simulation Domain}
-	We set our simulation in a spherical domain with reflecting boundaries. The circle, $\Omega_d(\rho)$ of radius $\rho$, will represent a region around the damage site, rather than the entire nucleus. 
-	because the UVC beam is shot vertically through the cell, every layer in the 3D is damaged equally. We consider the process of DNA dynamics post UVC to be similar in each 3D stack and perform our experiment in 2D, which simulates the Z-projection made in the experiments.
-	To keep the polymer dense inside this region, we set $\rho=(b\sqrt{N/6})/2$. The actual value of this parameter is yet to be justified. The reflecting boundaries mimic the condensation barrier of the DNA with surrounding chromosomal chain, unaffected by the UV damage. 
-	\subsection{The chromatin [to be corrected]}	
+	We set our simulation in a spherical domain with reflecting boundaries.
+	Because the UVC beam is shot vertically through the cell, every layer in the 3D is damaged equally. We consider the process of DNA dynamics post UVC to be similar in each 3D stack and perform our experiment in 2D, which simulates the Z-projection made in the experiments. The circle, $\Omega_d(\rho)$ of radius $\rho<r_c$, will represent a region around the damage site, rather than the entire nucleus. 
+	To keep the polymer dense inside this region, we set $\rho=(b\sqrt{N/6})/2$, half the radius of gyration of a Rouse polymer. The actual value of this parameter is yet to be justified. The reflecting boundaries mare placed to pose as condensation barrier of the DNA with surrounding chromosomal chain, unaffected by the UV damage. 
+	
+	\subsection{The chromatin}
 		The chromatin is modeled as a monomer-spring polymer of $N$ monomers connected by harmonic springs. The dynamics of the polymer is governed by 3 forces: thermal fluctuations, spring force, and bending force, which we vary during simulations to approximate the observed experimental behavior. Before UVC beam is shot, the polymer's dynamics is governed by spring forces only, whereas after UVC the affected monomers of the chain along with their nearest neighbors are assigned additional bending elasticity forces. 
 		
 		Thermal diffusion fluctuation, results from the random collision of the polymer with the particles of its surrounding, and is given by 
@@ -97,9 +104,9 @@
 		\frac{dR_n(t)}{dt}= F_e +F_b +\sqrt{2D} \frac{dw}{dt}     
 		\end{equation*}
 					
-	\subsection{The UV beam}
+	\subsection{The UV beam}\label{subsection:TheUVbeam}
 	UV beam has 3 $\mu m^2$ section, yielding a radius of $r_{uv}=\sqrt{\frac{3}{\pi}}\approx 1 \mu m$. 
-    The damage cause by the UV beam follows a Gaussian distribution around the UV beam focus. In simulations, we place the focus of the beam on the polymer's center-of-mass, and activate it once, evaluating for each monomer within the beam's area the probability to be damaged. [Insert here the experimental data]
+    The damage cause by the UV beam follows a Gaussian distribution around the UV beam focus. In simulations, we place the focus of the beam on the polymer's center-of-mass, and activate it once, evaluating for each monomer within the beam's area the probability to be damaged. DNA length wrapped on histones is roughly 3 times the length of the linker DNA, which makes histone wrapped DNA more probable to be damaged. 
     
 	\begin{figure}[H]
 	\centering
@@ -108,33 +115,26 @@
 	\label{fig:UVDamageDistribution}
 	\end{figure}
 	
-    In line with experimental measurement, the probability of a monomer to be damaged follows a Gaussian distribution with its center at the UVC beam's center-of-mass, which is placed at the polymer's center-of-mass. Only monomers found within the UVC beam area are tested to be damaged. 
+    In line with experimental measurement, the probability of a monomer to be damaged follows a Gaussian distribution with its center at the UVC beam's center-of-mass, which is placed at the polymer's center-of-mass (see Figure \ref{fig:UVDamageDistribution}). Only monomers found within the UVC beam area potentially damaged. 
       	
-    \subsection{UVC effect on monomers}
+    \subsection{UVC effect on Polymer dynamics}\label{subsection:UvcEffectOnMonomers}
       Several scenarios will be examined in this report:
       \begin{enumerate}
       	\itemsep0em
       	\item We assign bending elasticity to damaged monomers, with an opening angle $\theta$;
       	\item We assign bending elasticity to the non-damaged monomers with an opening angle $\theta$;
       	\item We assign bending elasticity to the non-damaged monomers found only in the UVC beam and unaffected by it, with opening angle $\theta$;
-      	\item We create a region of exclusion around each damaged monomer of radius $r_e$ with an harmonic pushing force.
+      	\item We introduce a circular region of exclusion around each damaged monomer having a radius $r_e$ and a truncated harmonic pushing force.
       \end{enumerate}
-      In the case of bending force, we will assign bending elasticity to damaged monomers and their nearest neighbors. This is done to create a polymer segment containing at least two monomers for the force to act upon and to prevent non ordinary behavior of isolated monomers assigned bending elasticity.      
+      
+      In the case of bending force, we will assign bending elasticity to damaged monomers and their nearest neighbors. By such construction we create a polymer segment containing at least two monomers for the force to act upon and to prevent non ordinary behavior of isolated monomers assigned bending elasticity.      
 	
-	\subsection{The region of interest (ROI)}
-     The area of chromatin expanded after UVC occupies $10 \mu m^2$ which gives 3 times the UVC beam radius, i.e. $3\mu m$, but is generally dependent on the intensity of the UVC beam and recruitment of repair proteins. 
+	\subsection{The region of interest (ROI)}\label{subsection:TheROI}
+	
+     The area of chromatin expanded after UVC is measured by the presence of tagged repair proteins and occupies $10 \mu m^2$ which gives 3 times the UVC beam radius, i.e. $3\mu m$. The ROI radius generally depends on the intensity of the UVC beam and recruitment of repair proteins. 
      The region of interest (ROI) in experiment is determined by the presence of the repair mechanism 10-15 minutes post UVC. Repair proteins are thought to be bounded to damaged section of the chromatin. Accordingly, we define the ROI as the radius of expansion, $\rho_e$, of the damaged monomers at the end of repair stage and remains of fixed size. The radius of expansion is defined as the mean square distance of 90\% of the damaged monomers from their center of mass. 
-     The center of the ROI is dynamically placed at the center of the mass of the polymer at each step. All density calculation within the ROI are made off-line. 
-	
-	\subsection{DNA density}
-    We evaluate two quantities within the ROI related to the density of the chromatin within it. The first, we calculate the number of monomers (vertexes) located within the ROI at any given step. The second, we calculate the total length of bonds falling within the circular ROI.
-	
-    \subsection{Histone Density}
-		We consider histones to be uniformly distributed in the nucleus and in the damage zone. There are $3\times 10^6$ histones marked, which makes their density $3\times 10^6 /(4 \pi 7.25^3)\approx 630$ histones/$\mu m^3$
-		The expected number of histones in the UV beam region is $14.5\pi \times 630\approx 30,000$ histones, assuming the beam is shot through the center of the sphere. 
-		
-		histone density in simulations [To be Determined]
-        						         
+     The center of the ROI is dynamically placed at the center of the mass of the polymer at each step. All density calculation within the ROI are made after simulations have finished. 
+							         
     \subsection{Model Parameters}
       Parameters used in simulations are set proportional to of the quantity $\frac{dk_BT}{b^2}$, which we fix to be 1 by setting the friction factor $\xi=1$. 
     \subsubsection{The parameter b} 
@@ -154,14 +154,12 @@
     We set the percentage of included damaged monomers to 95\%. The ROI is calculated from the polymer's center-of-mass, such that 95\% of the damaged monomers are included within it. 
     The ROI is calculated at the end of the repair phase, after expansion has thought to reach saturation [How is saturation determined?]. The radius of the ROI is then used to back-calculate the densities within it relative to the center of mass of the polymer at any time step starting from the beam shot time. 
     
-    \subsubsection{determining expansion saturation}
+    \subsubsection{Determining expansion saturation}
      In the current version of the simulation framework, we assume the expansion of the affected monomers has reached saturation at the end of repair phase. To determine the radius of the ROI, we take the average of the affected monomers' radius of expansion in the last 10\% of the steps in the repair phase. 
-
     		             		
-	\section{Simulations}	
+	\section{Simulations}\label{section:Simulations}
 	
-	\subsection{Simulation procedure}
-	Simulations were ran $numRelaxationSteps$ up to relaxation, after which the diffusion force was set to $0$ and recording for $numRecordingSteps$. Following, the UV beam was shot through the center of the polymer's mass. Monomers found within the UV beam area were considered damaged with a probability following a Gaussian distribution (as provided by the experimental data). Simulation were then ran for additional $numBeamSteps$.
+	Simulations were ran $numRelaxationSteps$ up to relaxation, after which the diffusion force was set to $0$ and recording for $numRecordingSteps$. Following, the UV beam was shot through the center of the polymer's mass. Monomers found within the UV beam area were considered damaged with a probability following a Gaussian distribution (see subsection \ref{subsection:TheUVbeam}). Simulation were then ran for additional $numBeamSteps$.
 	
 	Simulation were placed in a spherical domain with reflecting boundaries.
 	Measurement of density were performed on a circular region, with its center dynamically placed at the polymer's center-of-mass, and it's radius determined at the end of the repair phase by the radius of expansion of the damaged monomers.
@@ -172,13 +170,13 @@
 	\section{2D simulations of DNA loss}
 	 
 	\subsection{Adding Lennard-Jones force}
-      After UVC, several monomers are hit and together with their nearest-neighbors are assigned bending elasticity with an opening angle of a certain value. Usually, a region of consecutive affected monomers is enclosed by non-affected monomers. Therefore, the result of activating the bending elasticity force for the affected monomers is the formation of horse-show type of loops structures. 
+      After UVC, several monomers are hit and together with their nearest-neighbors are assigned bending elasticity with an opening angle $\theta$. Usually, a region of consecutive affected monomers is enclosed by non-affected monomers. Therefore, the result of activating the bending elasticity force for the affected monomers is the formation of horse-show type of loops structures. 
       Affected monomers are located at the center of the polymer and expand usually outwards (although the direction of expansion cannot be controlled). The problem is that the expanded region of the chain exit the ROI and keep expanding passed the layer of non-affected monomers, that are usually located outside the ROI. 
       
       The Rouse polymer permits bonds to cross each other, and therefore the affected monomers do not stop at the non-damaged monomer layer. 
-      to try to confine the damaged monomers to the region of the damage, we assign volume exclusion, Lennard-Jones potential, to the chain. The non-affected monomers will hopefully counter-balance the expansion of the damaged monomers, keeping them from passing the non-affected layer outside the damage zone.
+      To confine the damaged monomers to the damage region, we assign Lennard-Jones potential, to the monomers of the chain. The non-affected monomers will hopefully counter-balance the expansion of the damaged monomers, keeping them from passing the non-affected layer outside the damage zone.
       
-      In the experiments explained below we ran the simulation to see if the radius of expansion of the damaged monomers can be limited by the Lennard-Jones fores. Simulations are performed in two-dimensional spherical environment, the polymer includes 500 monomers.      
+      In the experiments explained below we ran the simulation to examine whether the radius of expansion of the damaged monomers can be limited by the Lennard-Jones fores. Simulations are performed in two-dimensional spherical environment, the polymer includes 500 monomers.      
       
      \begin{figure}[H]
      \includegraphics[width=0.5\linewidth, height=0.3\textheight]{RadiusOfExpansion500BeadsLennardJones}
@@ -189,16 +187,14 @@
       
       From figure \ref{fig:RadiusOfExpansion500BeadsLennardJones} we can see that the Lennard-Jones is not sufficient to stop the monomers from expanding. The damaged monomers' MSD in relation to their center-of-mass keeps increasing until about 300 sec, where it reaches a local plateau. At this point, many damaged monomers are at the same distance as the non-damaged ones and the expansion seems to go into a halt. Once the bending force overcomes the resistance by the Lennard Jones force, the expansion continues. The damaged monomers' radius of expansion doesn't reach the value of the non-damaged. However, we suspect that it will, given enough time for simulation. Moreover, the expansion is measured relative to the center-of-mass of either the damaged or non-damaged, and so it is not clear where are those two groups relative to each other. 
       
-      Changing the radius of expansion to be calculated relatively to a fixed point, namely the beam's center at initiation, does not change the magnitude of expansion. The damaged monomers keep-on expanding. 
-      
+      Changing the radius of expansion to be calculated relatively to a fixed point, namely the beam's center at initiation, does not change the magnitude of expansion. The damaged monomers keep-on expanding.       
       We therefore, omit the Lennard-Jones potential from further consideration in the next simulation.
 
 
    \subsection{Cross-linking the polymer}
-    To prevent monomers from expanding after UVC in an uncontrolled manner, we randomly add connectors between pairs of non-nearest-neighbor monomers in addition to the linear backbone of the polymer. The measure for connectivity we use is the percentage of connected pairs out of the total number of monomers, e.g. 50\% connectivity in a 100 monomer chain corresponds to 25 additional connector (connecting 50 monomers). 
+    To prevent uncontrolled monomer expanding after UVC, we randomly add connectors between pairs of non-nearest-neighbor monomers in addition to the linear backbone of the polymer. The measure for connectivity we use is the percentage of connected pairs out of the total number of monomers, e.g. 50\% connectivity in a 100 monomer chain corresponds to 25 additional connector (connecting 50 monomers). The additional connectors serve to mimic organizational proteins such as CTCF and Cohesin. 
 	
-	At simulation initiation, we let the polymer relax to a state in which the cross-linked monomers are brought into proximity according to the minimal allowed distance. After UVC beam shot, we divide our results into two parts. In the first, we assign bending potential to the damaged monomers, in the second we assign bending potential to the non-damaged monomers. We further divide each case into two scenarios according to the effect of UVC. In the first, we break all damaged cross-links, that is, a connector to any affected monomers. In the second, we keep all cross-links throughout the simulation. 
-	In all simulation,the ROI was determined according to the damaged monomers radius of expansion.
+	At simulation initiation, we let the polymer relax to a state in which the cross-linked monomers are brought into their minimal allowed proximity $l_0$. After UVC beam shot, we divide our results into two parts. In the first, we assign bending potential to the damaged monomers, in the second we assign bending potential to the non-damaged monomers. We further divide each case into two scenarios according to the effect of UVC. In the first, we break all damaged cross-links after UVC, i.e. a connector to any affected monomers. In the second, we keep all cross-links throughout the simulation. 
 	
 	\subsection{Assigning bending to damaged monomers}
 	In this simulation we add bending elasticity potential to damaged monomers and their nearest-neighbor. Assigning bending potential to the damaged monomers' nearest neighbor was done to prevent peculiar dynamics isolated damaged monomers had and to create a more continuous regions affected by bending due to damage. The ROI is determined by the expansion of the damaged monomers. 
@@ -411,7 +407,7 @@
 	\begin{figure}[H]
 	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/ExludeAroundDamagedMonomers/BreakDamagedCrosslinks/06/meanRadiusOfExpansionAffected}
 	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/ExludeAroundDamagedMonomers/BreakDamagedCrosslinks/06/meanRadiusOfExpansionNonAffected}
-	\caption{\tiny{\textbf{Mean radius of expansion for the damaged (left) and non-damaged (right) monomers for 3 values of radius of exclusion around damaged monomers (legend). The cross links to and from each damaged monomers were removed post UVC. An expansion of ~1.7 is observed for radius of 0.65 (blue curve). The polymer included 500 monomers. 3 replicas of the experiment were made for each value of exclusion radius. simulation were performed for 9000 steps with a time step of 0.1, which results in 15 minuts.}}}
+	\caption{\tiny{\textbf{Mean radius of expansion for the damaged (left) and non-damaged (right) monomers for 3 values of radius of exclusion around damaged monomers (legend). The cross links to and from each damaged monomers were removed post UVC. An expansion of ~1.7 is observed for radius of 0.65 (blue curve). The polymer included 500 monomers. Three replicates of the experiment were made for each value of exclusion radius. Simulation were performed for 9000 steps with a time step of 0.1, which results in 15 minuts.}}}
 	\label{fig:meanRadiusOfExpansionAffectedVolumeOfExclusionParameterFitting}
 	\end{figure}
    
