compiled doc, changed slider resolution

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -743,5 +743,8 @@ The graph of $\hat{S}$ has the following form \ref{fig:instantaneousLossGainFunc
 
  
 \section{DNA repair}
+	\subsection{Structure similarity before UVC and after repair}
+	We examine the similarity between the polymer structure before UVC and at the end of repair stage. At the end of repair, the volume of exclusion is removed around damaged monomers and cross-links are reintroduced. The cross-links are added based on the distance between monomers. Only monomers initially in the beam area are permitted to re-form cross-links with a random closest neighbor. We add cross-links up to the initial cross-linking percentage specified. 
+	
 	
 \end{document}
