--- a/Documents/ResultSummary/SummaryOfResults.tex
+++ b/Documents/ResultSummary/SummaryOfResults.tex
@@ -26,11 +26,11 @@
 		\end{itemize}
 
 \section{Results explained}\label{section:ResultsExplained}
-       A short explanation accompanied by figures of the main results are presented in this section
+       A short derivation accompanied by figures of the main results are presented in this section
 
 		\subsection{Histone sliding model}\label{subsection:HistoneSlidingModel}		   
-		The imbalance of the loss of histone and DNA is explained by a 1D histone sliding model. Histones and DNA are pushed out of the ROI by two sub-mechanisms, the first if repair mechanism crowding, and the second is histone sliding. We note that crowding is continuously active throughout histone sliding, but not conversely.
-		
+		The imbalance between histone and DNA loss is explained by a 1D histone sliding model. Histones and DNA are pushed out of the ROI by two sub-mechanisms, the first if repair mechanism crowding, and the second is histone sliding. We note that crowding is continuously active throughout histone sliding, but not conversely. 				
+
 		We find DNA loss fraction
 		\begin{equation*}
         d=\frac{\beta-L}{\beta}
@@ -59,26 +59,44 @@
 		\subsection{Expansion attributed to sliding and pushing sub-mechanisms}\label{subsection:ExpansionDueToSlidingAndPushing}
 		The relative contribution of each sub-mechanism to the total expansion is estimated by dividing the expansion process into two: pushing and then pushing+sliding. The composition and order of events will be neglected in this description. 
 		
-	    If due to pushing up to a distance of $0<L<\beta$ we have lost a fraction of $k$ of both histones and DNA, we have for the total fraction of DNA and histone loss
-         
+		We consider the chromatin to be coiled in the ROI before UVC. After UVC, repair mechanism push and straighten the chromatin to create expansion, marked by repair protein presence. 
+	    If due to pushing up to a distance of $0<L'<\beta$ we have lost a fraction of $k$ of both histones and DNA. if the total chromatin length after pushing is $l+r$, in which $l$ is the length of chromatin in the UVC region and $r$ is the reminder.
+	    \begin{figure}[H]
+	    	\centering
+	    	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/2DmodelWithChromatinLength}
+	    	\caption{\tiny{\textbf{1D representation of 2D chromatin arrangement for sliding. A. The chromatin  is coiled and arranged in a ROI of length $\beta$. UVC damages a portion of the chromain, in which the right most damage point is marked s. B. due to crowding some of the chromatin is lost from the ROI, the rightmost damage point is pushed toward $\beta$ at a distance $L'$, C. the additional histone and DNA signal loss is attributed to sliding, in which the expansion is modeled as the projectio of the chromatin of length $l$ onto the horozontal 1D axes.}}}
+	    	\label{fig:2DmodelWithChromatinLength}
+	    \end{figure}
+	   
+	    We have for the total fraction of DNA and histone loss
+                           
 		\begin{eqnarray*}
-			d &=& k+\frac{\beta-L}{\beta}(1-k) \\
-			h &=& k+\frac{(\beta-L)(\beta+\alpha)}{\beta l}(1-k)
+			d &=& k+\frac{\beta-L'}{\beta}(1-k) \\
+			h &=& k+\frac{(\beta-L')(1+\alpha / \cos(\theta))}{\beta l}(1-k)= k+\frac{(\beta-L')(L'+\alpha l)}{\beta L'}(1-k)
 		\end{eqnarray*}
-		(see notation in previous subsection \ref{subsection:HistoneSlidingModel})		
-     	
-		The overall expansion radius to which sliding is responsible is thus 
-		\begin{equation}\label{eq:expansionRadiusDueToSliding}
-		L = \beta- \frac{\beta l(d-1)}{l(d-1) +\pi \beta(d-h)}
-		\end{equation}
+		(see notation in Figure \ref{fig:2DmodelWithChromatinLength} and in previous subsection \ref{subsection:HistoneSlidingModel}). 		
 		
-		Some values for the radius attributed to either mechanism are given in the figure below
-		\begin{figure}[H]			
-			\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfPushingVsLengthOfChromainInROI}
-			\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfSlidingVsLengthOfChromatinInROI}
-			\caption{\tiny{\textbf{The expansion radius attributed to pushing with no sliding (left) of chromatin as a function of the length of chromatin in the region, and it's complement, the radius of expansion attributed to pushing + sliding (right) as a function of the length of chromatin in the ROI. The ROI expansion is set to $\sqrt{3}$ and values of the chromatin length range from $\sqrt{3}$ to $7\sqrt{3}$}}}
-			\label{fig:radiiVsLengthOfChromainInROI}
-		\end{figure}
+        We extract $k$ from both equations and equate them to have 
+        \begin{equation*}       
+        \frac{L +\beta(h-1)+\alpha l}{L+\alpha (l-\beta)} =\frac{L+\beta(d-1)}{L}
+        \end{equation*}
+     	which results in radius for which pushing is responsible
+     	\begin{equation*}
+     	L' = (\beta-l)(1-d)
+     	\end{equation*}
+     	
+%		The overall expansion radius to which sliding is responsible is thus 
+%		\begin{equation}\label{eq:expansionRadiusDueToSliding}
+%		L' = \beta- \frac{\beta l(d-1)}{l(d-1) +\pi \beta(d-h)}
+%		\end{equation}
+%		
+%		Some values for the radius attributed to either mechanism are given in the figure below
+%		\begin{figure}[H]			
+%			\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfPushingVsLengthOfChromainInROI}
+%			\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfSlidingVsLengthOfChromatinInROI}
+%			\caption{\tiny{\textbf{The expansion radius attributed to pushing with no sliding (left) of chromatin as a function of the length of chromatin in the region, and it's complement, the radius of expansion attributed to pushing + sliding (right) as a function of the length of chromatin in the ROI. The ROI expansion is set to $\sqrt{3}$ and values of the chromatin length range from $\sqrt{3}$ to $7\sqrt{3}$}}}
+%			\label{fig:radiiVsLengthOfChromainInROI}
+%		\end{figure}
 		
 									
 		\subsection{Estimation of the contribution of sliding to the expansion from the data}\label{subsection:estimationOfSlidingRadiusFromTheData}
