added start of attempt to estimate the number of sliding events

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -634,6 +634,18 @@ The DNA and histone loss from a ROI of radius $L_2$ can therefore be described u
  \frac{L_2-L_1}{L_2}=1-\left(\frac{1-h}{\alpha}+\gamma -\frac{1}{R_T\alpha}\right)
  \end{equation*}
  
+\subsection{Number of sliding events}
+We now try to estimate the absolute number of sliding event occurring for any value of expansion and percentage of histone loss. Using the model in the previous subsection, we assume that with each sliding of a histone over the point $s$ (the rightmost damage point) the conformational change is $d\theta=const$ and the expansion along the line oriented at $\theta$ is $dl=\alpha=const$.
+The expansion for any given number of sliding events $k$ is given by 
+\begin{equation*}
+L(k) = (L_0+k\alpha)\cos(\theta_1 -kd\theta)
+\end{equation*}
+When expansion has reached saturation at$k=N$,$L(N) = L_2$, we have 
+\begin{equation*}
+\frac{\cos(\theta_1 -Nd\theta)}{L_2} = \frac{1}{L_0+Ndl}
+\end{equation*}
+The above equation cannot (at present) be solved for $N$. 
+
 
  
 \subsection{2D model - geometrical arrangement of chromatin}\label{subsection:2dModelGeometricalArrangement}
